add_executable(2594_minimum_time_to_repair_cars driver.cpp solution.cpp)
target_include_directories(2594_minimum_time_to_repair_cars PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
target_link_libraries(2594_minimum_time_to_repair_cars PRIVATE nlohmann_json::nlohmann_json)
target_compile_features(2594_minimum_time_to_repair_cars PRIVATE cxx_std_23)
